# rest-api-controller

./: Makefile  README.md  requirements.txt  setup.cfg  setup.py
apicontroller/: __about__.py  __init__.py  controller.py  exceptions.py
rest_api_controller/: __about__.py  __init__.py  controller.py  rest_api_controller.py
tests/: test_doctest.py  test_rest_api_controller.py  use_it.py
