[metadata]
name = apicontroller
version = 0.1.6
author = Ko4lA
author-email = francois@le.ko4la.fr
summary = Rest API controller'
description-file = file: README.md
python_requires = >=3.5
classifiers =
        Development Status :: 3 - Alpha
        Environment :: Console
        Programming Language :: Python :: 3.6
url = https://github.com/francois-le-ko4la/rest-api-controller
download_url = https://github.com/francois-le-ko4la/python-ping.git
license = GPL

[files]
packages = apicontroller, apicontroller.controller
extra_files = LICENSE
              MANIFEST.in

[options]
zip_safe = True
test_suite = tests.*
install_requires = apicontroller
	           pycodestyle>=2.3.1
	           setuptools>=39.0.1
		   requests>=2.18.1
setup_requires = pytest-runner

[build-system]
requires = ["setuptools"]

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose
