[metadata]
name = apicontroller
version = 0.3.0
author = Ko4lA
author-email = francois@le.ko4la.fr
summary = The funniest Rest API controller.
long_description = file: README.md
long_description_content_type="text/markdown"
python_requires = >=3.6
requires-dist = setuptools
classifiers =
        Development Status :: 3 - Alpha
        Environment :: Console
        Programming Language :: Python :: 3.6
url = https://github.com/francois-le-ko4la/rest-api-controller
download_url = https://github.com/francois-le-ko4la/rest-api-controller.git
license = GPL
extra_files =
        LICENSE

[options]
zip_safe = False
include_package_data = True
packages = find:
test_suite = tests.*
install_requires =
        wheel>=0.31.0
        pycodestyle>=2.4.0
        requests>=2.18.4
        setuptools>=39.0.1
setup_requires = pytest-runner

[aliases]
test=pytest
release = sdist bdist_wheel

[tool:pytest]
addopts = --verbose
